# BMPComparerConverter

./: CMakeLists.txt  README.md
include/bmp/: bmp.h
scripts/: build.sh  tests.sh
src/: CMakeLists.txt
src/bmp/: bmp.c  bmp.h
src/comparer/: comparer.c
src/converter/: converter.c
tests/comparer/: comparer_checker.py
tests/converter/: converter_checker.py
