cmake_minimum_required(VERSION 3.7)

set(PROJECT_NAME bmp-tools)
project(${PROJECT_NAME})

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})

add_subdirectory(src)

add_custom_target(
    testsCompConv ALL
    COMMENT "\n\n"
    COMMAND sh ${CMAKE_CURRENT_SOURCE_DIR}/scripts/tests.sh
)
